@@ -58,9 +58,17 @@ def importCMFFormController(context):
     fc_info = configurator.parseXML(body)
 
     for validator in fc_info['validators']:
-        fc.validators.set(FormValidator(validator['object_id'], validator['context_type'], validator['button'], str(validator['validators']).split(',')))
+        fc.validators.set(FormValidator(validator['object_id'],
+                                        validator.get('context_type', ''),
+                                        validator.get('button', ''),
+                                        str(validator['validators']).split(',')))
     for action in fc_info['actions']:
-        fc.actions.set(FormAction(action['object_id'], action['status'], action['context_type'], action['button'], action['action_type'], str(action['action_arg'])))
+        fc.actions.set(FormAction(action['object_id'],
+                                  action['status'],
+                                  action.get('context_type', ''),
+                                  action.get('button', ''),
+                                  action['action_type'],
+                                  str(action['action_arg'])))
 
     return 'CMFFormController settings imported.'
 
